# noaa_bravoseis

./: .gitignore  associate_events.py  compute_travel_times.py  detect_events.py  make_bathy_map.py  make_detection_figures.py  make_recording_timeline.py  make_spectrogram.py  pyproject.toml
notebooks/: gold_standard_review.ipynb  long_spectrogram_viewer.ipynb  review_lowband_0.ipynb  review_lowband_1.ipynb  review_lowband_2.ipynb  review_lowband_3.ipynb  review_lowband_4.ipynb  review_lowband_5.ipynb  review_lowband_6_hisnr.ipynb  review_lowband_7.ipynb  umap_explorer.ipynb
outputs/: methods_document.md  methods_section_draft_source.md
scripts/: assemble_phase3_catalogue.py  associate_events.py  associate_full.py  associate_tapaas.py  calibrate_mooring_bias.py  check_finwhale_contamination_lowband6.py  cluster_events.py  cluster_highband.py  cluster_lowband.py  compare_orca_locations.py  compare_pickers.py  compare_top100_locations.py  compute_travel_times.py  crossvalidate_seismic_catalogues.py  crossvalidate_tapaas_locations.py  detect_events.py  download_5m_waveforms.py  extract_features.py  extract_features_highband.py  extract_features_lowband.py  gold_consistency_check.py  interactive_umap.py  investigate_singer_eq_fate.py  investigate_singer_location_offsets.py  locate_events.py  locate_full.py  locate_land_events.py  locate_tapaas.py  main.py  make_12s_signal_figures.py  make_12s_signal_pdf.py  make_5hz_montage_pdf.py  make_bathy_map.py  make_cluster_montages.py  make_detection_figures.py  make_detection_qc.py  make_gold_single_panels.py  (+32 more)
(+17 files in other folders)
