[project]
name = "noaa-bravoseis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cmocean>=4.0.3",
    "h5py>=3.15.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.2",
    "obspy>=1.4.2",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pygmt>=0.18.0",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
    "scipy>=1.17.1",
    "xarray>=2026.2.0",
]
